apps/wikimedia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikimedia
  namespace: wikimedia
spec:
  type: ClusterIP
  selector:
    app: wikimedia
  ports:
    - name: http
      port: 80
      targetPort: 8000
